# gazelle-proto-per-file-dep-bug

./: BUILD.bazel  README.md  WORKSPACE
proto/pkg1/: BUILD.bazel  foo.proto  test.proto
proto/pkg2/: BUILD.bazel  test2.proto
